# 2VOVModel.py

./: .gitignore  README.md  pyproject.toml
src/: 2dOVModel.py  main.py  model.py  simulation.py
