[tool.poetry]
name = "2dovmodel"
version = "0.1.0"
description = ""
authors = ["kanade"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
imageio = "^2.34.2"
numba = "^0.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
